# to-see-my-life

./: Cargo.toml  LICENSE  README.md  TODO_MANAGER_ITERATION.md
docs/: e2e-test-plan.md
src/: cli.rs  config.rs  gui.rs  logging.rs  main.rs  review.rs  stats.rs  timer.rs  todo.rs  util.rs  workbench.rs
tests/: e2e.rs
