[package]
name = "to-see-my-life"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsml"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dialoguer = "0.11"
notify-rust = "4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
