[package]
name = "to-see-my-life"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsml"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.6.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dialoguer = "0.11"
eframe = { version = "0.34.2", features = ["persistence"] }
egui_extras = "0.34.2"
egui_plot = "0.35.0"
notify-rust = "4"
open = "5.3.4"
ratatui = "0.29"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
